# portfolio-kit

./: .env.example  .gitignore  README.md  README_AGENT.md  SETUP.md  config.py  dependencies.py  esbuild.config.mjs  filters.py  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.mjs
content/: about.md  assets.json  settings.json
content/projects/: cartoons.md  comedy-feature.md  motion-frames.md  process-notes.md  rite-of-way.md  studio-refresh.md
middleware/: cache_control.py  forwarded_proto.py  security_headers.py
routers/: admin.py  auth.py  pages.py
static/css/: edit-mode.css  styles.css
static/ts/: types.ts
static/ts/edit/: blocks.ts  image-media.ts  index.ts  inline-markdown.ts  text-formatting.ts  text-line-editor.ts
static/ts/public/: index.ts
templates/: 404.html  500.html  about.html  base.html  index.html  project.html
tests/: conftest.py  test_admin_routes.py  test_content_utils.py
tests/frontend/: blocks.test.ts  editor.test.ts  homepage.test.ts  setup.ts
tools/: bootstrap_sample_content.py
utils/: assets.py  content.py  content_sync.py  image.py  s3.py  static_assets.py  storage.py
